<resources>
    <string name="app_name">Rafael_Work</string>
    <string name="nombre">Nombre</string>
    <string name="resultado">Resultado</string>
    <string name="sueldo">Sueldo</string>
    <string name="diciembre">Diciembre</string>
    <string name="work_d">Work D</string>
    <string name="enero">Enero</string>
    <string name="febrero">Febrero</string>
    <string name="marzo">Marzo</string>
    <string name="abril">Abril</string>
    <string name="mayo">Mayo</string>
    <string name="junio">Junio</string>
    <string name="julio">Julio</string>
    <string name="agosto">Agosto</string>
    <string name="septiembre">Septiembre</string>
    <string name="octubre">Octubre</string>
    <string name="noviembre">Noviembre</string>
    <string name="fecha">Fecha</string>
</resources>