<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/work_d"
                android:textAlignment="center"
                android:textSize="20sp">
            </TextView>
            <EditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:fontFamily="@font/inter"
                android:autofillHints=""
                android:inputType="text"
                android:textColor="@color/texto"
                android:textColorHint="@color/hint">
            </EditText>
            <EditText
                android:id="@+id/fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fecha"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:fontFamily="@font/inter"
                android:autofillHints=""
                android:inputType="number"
                android:textColor="@color/texto"
                android:textColorHint="@color/hint">
            </EditText>
            <EditText
                android:id="@+id/ene"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enero"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:fontFamily="@font/inter"
                android:autofillHints=""
                android:inputType="number"
                android:textColor="@color/texto"
                android:textColorHint="@color/hint">
            </EditText>
            <EditText
                android:id="@+id/feb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/febrero"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:fontFamily="@font/inter"
                android:autofillHints=""
                android:inputType="number"
                android:textColor="@color/texto"
                android:textColorHint="@color/hint">
            </EditText>
            <EditText
                android:id="@+id/mar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/marzo"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:fontFamily="@font/inter"
                android:autofillHints=""
                android:inputType="number"
                android:textColor="@color/texto"
                android:textColorHint="@color/hint">
            </EditText>
            <EditText
                android:id="@+id/abr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/abril"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:fontFamily="@font/inter"
                android:autofillHints=""
                android:inputType="number"
                android:textColor="@color/texto"
                android:textColorHint="@color/hint">
            </EditText>
            <EditText
                android:id="@+id/may"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mayo"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:fontFamily="@font/inter"
                android:autofillHints=""
                android:inputType="number"
                android:textColor="@color/texto"
                android:textColorHint="@color/hint">
            </EditText>
            <EditText
                android:id="@+id/jun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/junio"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:fontFamily="@font/inter"
                android:autofillHints=""
                android:inputType="number"
                android:textColor="@color/texto"
                android:textColorHint="@color/hint">
            </EditText>
            <EditText
                android:id="@+id/jul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/julio"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:fontFamily="@font/inter"
                android:autofillHints=""
                android:inputType="number"
                android:textColor="@color/texto"
                android:textColorHint="@color/hint">
            </EditText>
            <EditText
                android:id="@+id/ago"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/agosto"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:fontFamily="@font/inter"
                android:autofillHints=""
                android:inputType="number"
                android:textColor="@color/texto"
                android:textColorHint="@color/hint">
            </EditText>
            <EditText
                android:id="@+id/sep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/septiembre"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:fontFamily="@font/inter"
                android:autofillHints=""
                android:inputType="number"
                android:textColor="@color/texto"
                android:textColorHint="@color/hint">
            </EditText>
            <EditText
                android:id="@+id/oct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/octubre"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:fontFamily="@font/inter"
                android:autofillHints=""
                android:inputType="number"
                android:textColor="@color/texto"
                android:textColorHint="@color/hint">
            </EditText>
            <EditText
                android:id="@+id/nov"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/noviembre"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:fontFamily="@font/inter"
                android:autofillHints=""
                android:inputType="number"
                android:textColor="@color/texto"
                android:textColorHint="@color/hint">
            </EditText>
            <EditText
                android:id="@+id/dic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/diciembre"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:fontFamily="@font/inter"
                android:autofillHints=""
                android:inputType="number"
                android:textColor="@color/texto"
                android:textColorHint="@color/hint">
            </EditText>
            <EditText
                android:id="@+id/sueldo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sueldo"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:fontFamily="@font/inter"
                android:autofillHints=""
                android:inputType="number"
                android:textColor="@color/texto"
                android:textColorHint="@color/hint">
            </EditText>
            <Button
                android:id="@+id/boton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resultado"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:fontFamily="@font/inter">
            </Button>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>